--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ body {
 	}
 }
 #dataexplorer {
-	background: #DEF;
+	background: #F5FAFF;
 	.enums{
 		padding-top: 15px;
 		text-align: right;
@@ -233,34 +233,6 @@ body {
 		}
 	}
 }
-
-/*.opt {
-	display: inline-block;
-	text-align: left;
-	margin-right: 10px;
-	border-bottom: 1px solid @Base025;
-	margin-bottom: 3px;
-	& .opt_l {
-		display: inline-block;
-		position: relative;
-		width: 80px;
-		font-size: 10px;
-		color: @Base075;
-	}
-	& input[type=text] {
-		background: @Base000;
-		padding: 2px;
-		color: @B1;
-		cursor: text;
-		position: relative;
-		width: 60px;
-	}
-	&.wide {
-		& input[type=text] {
-			width: 218px;
-		}
-	}
-}*/
 .outsect {
 	padding: 5px;
 	position: relative;
