--- a/index.html
+++ b/index.html
@@ -255,6 +255,7 @@ body {
 		display: block; position: relative; height: 80px; margin: 0; min-height: 0; padding: 0; max-width: 1024px; cursor: pointer;
 		border-bottom: 1px solid #EEE;
 		&:hover{background: #EEE;};
+		&.numeric {cursor:default; &:hover{background:#FFF;}}
 		.outq_boxplot {
 			position: absolute;
 			width: 240px;
