--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ body {
 		text-align: center;
 		border-bottom: 1px solid rgba(0,0,0,0.25);
 	}
-	&.global {background: #FFE;}
+	
 	&.stats {
 		display: block; position: relative; height: 80px; margin: 0; min-height: 0; padding: 0; max-width: 1024px; cursor: pointer;
 		border-bottom: 1px solid #EEE;
@@ -263,6 +263,7 @@ body {
 			right: 10px;
 			top: 0;
 		}
+		&.global {background: #FFE; cursor: default; &:hover{background: #FFE;}}
 		.question {
 			position: absolute;
 			left: 10px;
