--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <!DOCTYPE html> 
 <html>
 <head>
-<title>OpenSemanticParser</title>
+<title>OpenSentiment</title>
 <meta charset='utf-8'>
+<link rel="shortcut icon" href="./favicon.png" type="image/png">
 <!-- style --> 
 <style type="text/less">
 // --
