--- a/index.html
+++ b/index.html
@@ -244,6 +244,7 @@ body {
 	min-height: 220px;
 	min-width: 250px;
 	background:#FFF;
+	text-align: left;
 	h2, h3 {
 		overflow: hidden;
 		white-space: nowrap;
